--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 yfinance==0.1.70
 pandas==1.4.2
 pandas-ta==0.3.14b0
+scikit-learn==1.1.1
+numpy==1.22.4
+charset-normalizer==2.0.12
+click==8.1.3
+statsmodels==0.13.2
+pyts==0.12.0
